--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <img src="/assets/logo.svg" alt="logo da nlw copa">
+    <img src="./assets/logo.svg" alt="logo da nlw copa">
   </header>
   <div class="card" onclick="changeCard(event)">
     <img src="https://github.com/kervines.png" alt="foto de kervin">
